working seek bar

--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
     android:gravity="left"
@@ -18,7 +18,7 @@
 
     <View
         android:layout_width="5dp"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="50dp"
         android:background="@color/surespotBlue"
@@ -26,7 +26,7 @@
     </View>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
@@ -81,26 +81,37 @@
             android:id="@+id/messageImage"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_gravity="left"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:layout_gravity="left"
+            android:adjustViewBounds="false"
             android:scaleType="centerCrop"
-            android:adjustViewBounds="false"            
             android:visibility="gone" />
-        
-         <ImageView
-            android:id="@+id/messagePTT"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:id="@+id/messageVoice"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="left"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2sp"
-            android:adjustViewBounds="false"
-            android:src="@android:drawable/ic_media_play"
-            android:scaleType="centerCrop"
-            android:visibility="gone" />
+            android:orientation="horizontal"
+            android:visibility="gone" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="false"
+                android:scaleType="centerCrop"
+                android:src="@android:drawable/ic_media_play" />
+
+            <SeekBar
+                android:id="@+id/seekBarVoice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/messageMimeType"
