don't create media player until we want to play the sound

--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -100,6 +100,7 @@
             android:visibility="gone" >
 
             <ImageView
+                android:id="@+id/voicePlay"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="false"
@@ -110,7 +111,8 @@
                 android:id="@+id/seekBarVoice"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:enabled="false" />
 
             <TextView
                 android:id="@+id/voiceTime"
