--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -106,6 +106,15 @@
                 android:adjustViewBounds="false"
                 android:scaleType="centerCrop"
                 android:src="@android:drawable/ic_media_play" />
+            
+              <ImageView
+                android:id="@+id/voiceStop"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="false"
+                android:scaleType="centerCrop"
+                android:src="@android:drawable/ic_media_pause" />
 
             <SeekBar
                 android:id="@+id/seekBarVoice"
