--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -31,7 +31,7 @@
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical" >
 
@@ -62,6 +62,15 @@
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
                 android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/messageSize"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <TextView
@@ -106,15 +115,15 @@
                 android:adjustViewBounds="false"
                 android:scaleType="centerCrop"
                 android:src="@android:drawable/ic_media_play" />
-            
-              <ImageView
+
+            <ImageView
                 android:id="@+id/voiceStop"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="false"
                 android:scaleType="centerCrop"
-                android:src="@android:drawable/ic_media_pause" />
+                android:src="@android:drawable/ic_media_pause"
+                android:visibility="gone" />
 
             <SeekBar
                 android:id="@+id/seekBarVoice"
@@ -122,11 +131,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:enabled="false" />
-
-            <TextView
-                android:id="@+id/voiceTime"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
         </LinearLayout>
 
         <TextView
