--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -40,7 +40,7 @@
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical" >
 
@@ -71,6 +71,15 @@
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
                 android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/messageSize"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <TextView
@@ -131,11 +140,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:enabled="false" />
-
-            <TextView
-                android:id="@+id/voiceTime"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
         </LinearLayout>
 
         <TextView
