--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
         </EditText>
     </FrameLayout>
 
-    <com.twofours.surespot.ui.TextScaleButton
+    <FrameLayout
         android:id="@+id/bSend"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -98,11 +98,47 @@
         android:layout_alignWithParentIfMissing="true"
         android:layout_marginBottom="-10dp"
         android:layout_marginRight="-10dp"
-        android:background="@drawable/send_button"
-        android:paddingLeft="10dp"
-        android:paddingRight="20dp"
-        android:text="@string/home"
-        android:textColor="@android:color/black" />
+        android:background="@drawable/send_button" >
+
+        <ImageView
+            android:id="@+id/ivInvite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_menu_invite" >
+        </ImageView>
+
+        <LinearLayout
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/ivHome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_menu_home" >
+            </ImageView>
+
+            <ImageView
+                android:id="@+id/ivVoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_btn_speak_now" >
+            </ImageView>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/ivSend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@android:drawable/ic_menu_send" >
+        </ImageView>
+    </FrameLayout>
 
     <GridView
         android:id="@+id/fEmoji"
