--- a/res/layout/voice_purchase_fragment.xml
+++ b/res/layout/voice_purchase_fragment.xml
@@ -8,27 +8,27 @@
         android:id="@+id/tvPurchase"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="@string/voice_messaging_purchase_1" >
     </TextView>
 
     <Button
         android:id="@+id/bPurchaseVoice"
+        style="@style/Widget.Sherlock.ActionButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/voice_messaging_purchase_button" >
+        android:layout_height="wrap_content"        
+        android:text="@string/voice_messaging_purchase_button"
+        android:textColor="@color/surespotBlue" >
     </Button>
 
     <CheckBox
         android:id="@+id/cbDontShow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/voice_message_suppress_purchase_ask"
         android:visibility="gone" />
-
-    <Button
-        android:id="@+id/bClose"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/ok" />
 
 </LinearLayout>
