add images referenced using @android prefix

--- a/res/layout/activity_external_invite.xml
+++ b/res/layout/activity_external_invite.xml
@@ -107,8 +107,8 @@
         android:padding="5dp"
         android:src="@drawable/qr_surespot" />
 
-    <Button
-        android:id="@+id/bSendInvitation"
+    <FrameLayout
+        android:id="@+id/bNext"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
@@ -116,7 +116,24 @@
         android:layout_marginBottom="-10dp"
         android:layout_marginRight="-10dp"
         android:background="@drawable/send_button"
-        android:text="@string/next"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black" >
+
+        <ImageView
+            android:id="@+id/bNext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_menu_send" >
+        </ImageView>
+
+        <ImageView
+            android:id="@+id/bInvite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_menu_invite"
+            android:visibility="gone" >
+        </ImageView>
+    </FrameLayout>
 
 </RelativeLayout>
