--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -129,7 +129,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@android:drawable/ic_menu_send" >
+            android:src="@drawable/ic_menu_send" >
         </ImageView>
     </FrameLayout>
 
