--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
                 android:layout_marginTop="1dp"
-                android:src="@android:drawable/ic_secure"
+                android:src="@drawable/ic_secure"
                 android:visibility="gone" />
 
             <TextView
@@ -114,7 +114,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="false"
                 android:scaleType="centerCrop"
-                android:src="@android:drawable/ic_media_play" />
+                android:src="@drawable/ic_media_play" />
 
             <ImageView
                 android:id="@+id/voiceStop"
@@ -122,7 +122,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="false"
                 android:scaleType="centerCrop"
-                android:src="@android:drawable/ic_media_previous"
+                android:src="@drawable/ic_media_previous"
                 android:visibility="gone" />
 
             <SeekBar
