--- a/res/menu/menu_help.xml
+++ b/res/menu/menu_help.xml
@@ -2,7 +2,7 @@
 
     <item
         android:id="@+id/menu_help"
-        android:icon="@android:drawable/ic_menu_help"
+        android:icon="@drawable/ic_menu_help"
         android:showAsAction="always"
         android:title="@string/help"
         android:titleCondensed="@string/help"/>
