--- a/res/layout/activity_export_identity.xml
+++ b/res/layout/activity_export_identity.xml
@@ -9,11 +9,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
+        <TextView
+            android:id="@+id/backupIdentitiesWarning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp" />
+
         <Spinner
             android:id="@+id/identitySpinner"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="5dp" />
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -32,16 +41,6 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:orientation="vertical" >
-
-            <!--
-                 <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:gravity="center_horizontal"
-                android:text="@string/backup_local_location_label" />
-            -->
 
             <TextView
                 android:id="@+id/backupLocalLocation"
