--- a/res/layout/voice_purchase_fragment.xml
+++ b/res/layout/voice_purchase_fragment.xml
@@ -43,7 +43,7 @@
         style="@style/Widget.Sherlock.ActionButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/ok"
+        android:text="@string/close"
         android:textColor="@color/surespotBlue" >
     </Button>
 
