--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -90,7 +90,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
-                android:text="@string/help_shortPress" />
+                android:text="@string/voice_help_1" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -98,7 +98,23 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
-                android:text="@string/help_longPress" />
+                android:text="@string/voice_help_2" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/voice_help_3" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/voice_help_4" />
 
             <TextView
                 android:layout_width="match_parent"
