center don't ask again checkbox

--- a/res/layout/voice_purchase_fragment.xml
+++ b/res/layout/voice_purchase_fragment.xml
@@ -23,7 +23,8 @@
 
     <CheckBox
         android:id="@+id/cbDontShow"
-        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
