--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,56 +1,15 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <PreferenceCategory android:title="@string/pref_title_general" >
-        <Preference android:title="@string/pref_title_about_surespot" >
-            <intent android:action="com.twofours.surespot.activities.AboutActivity" >
-            </intent>
-        </Preference>
-        <Preference
-            android:key="pref_help"
-            android:title="@string/pref_title_help" >
-        </Preference>
-    </PreferenceCategory>
-    <PreferenceCategory android:title="@string/notifications_title" >
-        <CheckBoxPreference
-            android:defaultValue="true"
-            android:key="pref_notifications_enabled"
-            android:title="@string/notifications_enabled" />
-        <CheckBoxPreference
-            android:defaultValue="true"
-            android:dependency="pref_notifications_enabled"
-            android:key="pref_notifications_sound"
-            android:title="@string/notifications_sound" />
-        <CheckBoxPreference
-            android:defaultValue="true"
-            android:dependency="pref_notifications_enabled"
-            android:key="pref_notifications_vibration"
-            android:title="@string/notifications_vibration" />
-        <CheckBoxPreference
-            android:defaultValue="true"
-            android:dependency="pref_notifications_enabled"
-            android:key="pref_notifications_led"
-            android:title="@string/notifications_led" />
-    </PreferenceCategory>
-    <PreferenceCategory android:title="@string/pref_title_confirmations" >
-        <CheckBoxPreference
-            android:defaultValue="true"
-            android:key="pref_delete_message"
-            android:summary="@string/pref_summary_delete_message"
-            android:title="@string/pref_title_delete_message" />
-        <CheckBoxPreference
-            android:defaultValue="true"
-            android:key="pref_delete_all_messages"
-            android:summary="@string/pref_summary_delete_all_messages"
-            android:title="@string/pref_title_delete_all_messages" />
-    </PreferenceCategory>
-      <PreferenceCategory android:title="@string/pref_billing" >
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:key="pref_suppress_voice_purchase_ask"
-            android:summary="@string/pref_suppress_voice_purchase_ask_summary"
-            android:title="@string/pref_suppress_voice_purchase_ask_title" />
-    </PreferenceCategory>
-    <PreferenceCategory android:title="@string/pref_title_identity_management" >
+    <Preference android:title="@string/pref_title_about_surespot" >
+        <intent android:action="com.twofours.surespot.activities.AboutActivity" >
+        </intent>
+    </Preference>
+    <Preference
+        android:key="pref_help"
+        android:title="@string/pref_title_help" >
+    </Preference>
+
+    <PreferenceScreen android:title="@string/pref_title_identity_management" >
         <Preference android:title="@string/pref_title_change_password" >
             <intent android:action="com.twofours.surespot.identity.ChangePasswordActivity" >
             </intent>
@@ -80,20 +39,54 @@
             <intent android:action="com.twofours.surespot.activities.ManageKeysActivity" >
             </intent>
         </Preference>
-    </PreferenceCategory>
-    <PreferenceCategory android:title="@string/pref_title_options" >
+    </PreferenceScreen>
+    <PreferenceScreen android:title="@string/notifications_title" >
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_notifications_enabled"
+            android:title="@string/notifications_enabled" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:dependency="pref_notifications_enabled"
+            android:key="pref_notifications_sound"
+            android:title="@string/notifications_sound" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:dependency="pref_notifications_enabled"
+            android:key="pref_notifications_vibration"
+            android:title="@string/notifications_vibration" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:dependency="pref_notifications_enabled"
+            android:key="pref_notifications_led"
+            android:title="@string/notifications_led" />
+    </PreferenceScreen>
+    <PreferenceScreen android:title="@string/pref_title_options" >
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_delete_message"
+            android:summary="@string/pref_summary_delete_message"
+            android:title="@string/pref_title_delete_message" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_delete_all_messages"
+            android:summary="@string/pref_summary_delete_all_messages"
+            android:title="@string/pref_title_delete_all_messages" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="pref_suppress_voice_purchase_ask"
+            android:summary="@string/pref_suppress_voice_purchase_ask_summary"
+            android:title="@string/pref_suppress_voice_purchase_ask_title" />
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_alternate_text_delimiter"
             android:summary="@string/pref_summary_alternate_sms_delimiter"
             android:title="@string/pref_title_alternate_sms_invite_to" />
-    </PreferenceCategory>
-    <PreferenceCategory android:title="@string/pref_title_debug" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_debug_mode"
             android:summary="@string/pref_summary_message_debug_mode"
             android:title="@string/pref_title_message_debug_mode" />
-    </PreferenceCategory>
+    </PreferenceScreen>
 
 </PreferenceScreen>
