--- a/res/layout/voice_purchase_fragment.xml
+++ b/res/layout/voice_purchase_fragment.xml
@@ -21,16 +21,22 @@
         android:textColor="@color/surespotBlue" >
     </Button>
 
-    <CheckBox
-        android:id="@+id/cbDontShow"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:text="@string/voice_message_suppress_purchase_ask"
-        android:visibility="gone" />
+        android:gravity="center" >
+
+        <CheckBox
+            android:id="@+id/cbDontShow"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"            
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="@string/voice_message_suppress_purchase_ask"
+            android:visibility="gone" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
