--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:drawSelectorOnTop="false"
+        android:cacheColorHint="#00000000"
+        android:divider="@drawable/list_divider_holo_light" 
         android:stackFromBottom="true"
         android:transcriptMode="normal" />
 
