try to fix RM#314 (https://github.com/JakeWharton/Android-ViewPagerIndicator/issues/72)

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         app:selectedColor="@color/surespotBlue"
         app:topPadding="0dp" />
 
-    <android.support.v4.view.ViewPager
+    <com.twofours.surespot.ui.FixedViewPager
         android:id="@+id/pager"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
