--- a/res/layout/dialog_help.xml
+++ b/res/layout/dialog_help.xml
@@ -33,7 +33,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:text="@string/invite_contacts" />
+            android:text="@string/share_link_help" />
 
         <TextView
             android:id="@+id/backupIdentitiesWarning"
