--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -49,7 +49,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
-                android:text="@string/invite_contacts" />
+                android:text="@string/share_invite_link" />
 
             <TextView
                 android:id="@+id/backupIdentitiesWarning"
