show share link and help link on home tab when no friends

--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -31,6 +31,54 @@
                 android:id="@+id/tvWelcome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center" />
+
+            <Button
+                android:id="@+id/tvShareInvite"
+                style="@style/Widget.Sherlock.ActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:drawableLeft="@drawable/blue_heart"
+                android:drawablePadding="10dp"
+                android:paddingRight="25dp"
+                android:text="@string/share_invite_link"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/surespotBlue" >
+            </Button>
+
+            <Button
+                android:id="@+id/tvHelp"
+                style="@style/Widget.Sherlock.ActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:drawableLeft="@drawable/ic_menu_help"
+                android:paddingRight="25dp"
+                android:text="@string/help"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/surespotBlue" >
+            </Button>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="@string/no_friends" />
+
+            <!--
+            <TextView
+                android:id="@+id/tvWelcome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp" />
@@ -139,6 +187,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/help_messageHistory" />
+            -->
         </LinearLayout>
     </ScrollView>
 
