--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -88,11 +88,11 @@
             android:title="@string/pref_title_message_debug_mode" />
     </PreferenceScreen>
     <PreferenceScreen android:title="@string/pref_title_global_options" >
-        <CheckBoxPreference
+    <!--     <CheckBoxPreference
             android:defaultValue="true"
             android:key="pref_enable_keystore_control"
             android:summary="@string/pref_summary_enable_keystore"
-            android:title="@string/pref_title_enable_keystore" />
+            android:title="@string/pref_title_enable_keystore" /> -->
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_stop_cache_logout_control"
