--- a/surespot/src/main/res/xml/preferences.xml
+++ b/surespot/src/main/res/xml/preferences.xml
@@ -27,6 +27,12 @@
             </intent>
         </Preference>
         <Preference
+            android:summary="@string/pref_summary_delete_identity_from_device"
+            android:title="@string/pref_title_delete_identity_from_device" >
+            <intent android:action="com.twofours.surespot.identity.DeleteIdentityFromDeviceActivity" >
+            </intent>
+        </Preference>
+        <Preference
             android:summary="@string/pref_summary_regen_keys"
             android:title="@string/key_management" >
             <intent android:action="com.twofours.surespot.activities.ManageKeysActivity" >
